compares/ApplicationStudy/E0_baseline/results_metrics/d/htsjdk_vcf/stderr.txt
warning: [options] system modules path not set in conjunction with -source 17
1 warning
warning: [options] system modules path not set in conjunction with -source 17
1 warning
[baseline] wrote C:\Users\miaot\Github\BioTest\compares\ApplicationStudy\E0_baseline\results_metrics\d\htsjdk_vcf\baseline.json (500 files)
[enumerate] VCF/htsjdk: 80 classes
  File "<string>", line 1
    import json,sys; d=json.load(sys.stdin); print(f"killed={d[\"killed\"]}/{d[\"reachable\"]}  score={d[\"score\"]*100:.2f}%")
                                                                ^
SyntaxError: unexpected character after line continuation character
